Fixed name logout

--- a/home/home.html
+++ b/home/home.html
@@ -52,7 +52,7 @@
         </nav>
 
         <div class="logout">
-          <a href="../index.html">Sai</a>
+          <a href="../index.html">Sair</a>
         </div>
 
         <div class="findUser">
