Including name of organizations

--- a/home/home.html
+++ b/home/home.html
@@ -96,7 +96,7 @@
             <div class="email">
               <img src="../assets/email.svg" alt="Ícone email" />
               <a id="email" href="mailto:joaosam.dev@gmail.com" target="_blank"
-                ></a
+                >rocketseat@teste.com</a
               >
             </div>
 
@@ -111,36 +111,9 @@
           <div class="infoOrganization">
             <p>Organizações</p>
 
-            <div class="rocketseat">
-              <img src="../assets/rocketseat.svg" alt="ícone organização" /><a
-                href="https://www.rocketseat.com.br/"
-                target="_blank"
-                >rocketseat</a
-              >
-            </div>
-
-            <div class="rocketseat">
-              <img src="../assets/rocketseat.svg" alt="ícone organização" /><a
-                href="https://www.rocketseat.com.br/"
-                target="_blank"
-                >rocketseat</a
-              >
-            </div>
-
-            <div class="rocketseat">
-              <img src="../assets/rocketseat.svg" alt="ícone organização" /><a
-                href="https://www.rocketseat.com.br/"
-                target="_blank"
-                >rocketseat</a
-              >
-            </div>
-
-            <div class="rocketseat">
-              <img src="../assets/rocketseat.svg" alt="ícone organização" /><a
-                href="https://www.rocketseat.com.br/"
-                target="_blank"
-                >rocketseat</a
-              >
+            <div id="divOrganization" class="organization">
+              <img id="imgOrganization" src="../assets/rocketseat.svg" alt="ícone organização" />
+              <p id="organization">rocketseat</p>
             </div>
           </div>
         </aside>
