Update generate phrases

--- a/home/home.html
+++ b/home/home.html
@@ -122,10 +122,9 @@
           <section class="welcome">
             <h1>Bem-vindo(a), <span id="loginProfile"></span></h1>
 
-            <p>
-              <span>Sorte de hoje</span>: Cada sonho que você deixa pra trás, é
-              um pedaço do seu futuro que deixa de existir.
-            </p>
+            <div class="containerPhrase">
+              <span>Sorte de hoje:</span><p id="quoteOfTheDay"></p>
+            </div>
 
             <div class="welcomeInfos">
               <div class="repos">
