Included dynamic organization

--- a/home/home.html
+++ b/home/home.html
@@ -95,8 +95,8 @@
 
             <div class="email">
               <img src="../assets/email.svg" alt="Ícone email" />
-              <a id="email" href="mailto:joaosam.dev@gmail.com" target="_blank"
-                >rocketseat@teste.com</a
+              <a id="email" href="mailto:teste@rocketseat.com" target="_blank"
+                >teste@rocketseat.com</a
               >
             </div>
 
