--- a/home/home.html
+++ b/home/home.html
@@ -108,14 +108,14 @@
             </div>
           </div>
 
-          <div class="infoOrganization">
+          <div id="infoOrganization" class="infoOrganization">
             <p>Organizações</p>
 
-            <div id="divOrganization" class="organization">
+            <!-- Conteúdo inserido via JS -->
+            <!-- <div id="divOrganization" class="organization">
               <img id="imgOrganization" src="../assets/rocketseat.svg" alt="ícone organização" />
               <p id="organization">rocketseat</p>
-            </div>
-          </div>
+            </div> -->
         </aside>
 
         <div class="hero">
