Updated last repositories

--- a/home/home.html
+++ b/home/home.html
@@ -181,11 +181,21 @@
 
             <div class="hubKutActions">
               <ul>
-                <li>Criar Repositório</li>
-                <li>Importar Repositório</li>
-                <li>Novo Gist</li>
-                <li>Nova Organização</li>
-                <li>Novo Proj</li>
+                <li> <a href="https://github.com/new" target="_blank">
+                  Criar Repositório</li>
+                </a>
+                <li><a href="https://github.com/new/import">
+                  Importar Repositório</li>
+                </a>
+                <li> <a href="https://gist.github.com/" target="_blank">
+                  Novo Gist</li>
+                </a>
+                <li><a href="https://github.com/organizations/plan">
+                  Nova Organização</li>
+                </a>
+                <li><a id="newProjectHubkut" href="" target="_blank">
+                  Novo Proj</li>
+                </a>
               </ul>
             </div>
           </section>
@@ -196,9 +206,11 @@
             <div class="containerRepositores">
               <div class="repositores">
                 <div class="repDescription">
+                  <div class="contentRepos">
                   <img src="../assets/repos.svg" alt="Ícone repositórios">
-                  <a href="#">Joaosam/Teste</a>
-                    <p>Bio teste</p>
+                    <a id="nameRepos0" href="#" target="_blank"></a>
+                  </div>
+                  <p id="bioRepos0"></p>
                 </div>
 
                 <div class="containerFav">
@@ -211,9 +223,11 @@
 
               <div class="repositores">
                 <div class="repDescription">
-                  <img src="../assets/repos.svg" alt="Ícone repositórios">
-                  <a href="#">Joaosam/Teste 2</a>
-                  <p>Bio teste</p>
+                  <div class="contentRepos">
+                    <img src="../assets/repos.svg" alt="Ícone repositórios">
+                    <a id="nameRepos1" href="#" target="_blank"></a>
+                  </div>
+                  <p id="bioRepos1"></p>
                 </div>
 
                 <div class="containerFav">
@@ -226,9 +240,11 @@
 
               <div class="repositores">
                 <div class="repDescription">
-                  <img src="../assets/repos.svg" alt="Ícone repositórios">
-                  <a href="#">Joaosam/Teste 30</a>
-                  <p>Bio teste</p>
+                  <div class="contentRepos">
+                    <img src="../assets/repos.svg" alt="Ícone repositórios">
+                    <a id="nameRepos2" href="#" target="_blank"></a>
+                  </div>
+                  <p id="bioRepos2"></p>
                 </div>
 
                 <div class="containerFav">
@@ -241,9 +257,11 @@
               
               <div class="repositores">
                 <div class="repDescription">
-                  <img src="../assets/repos.svg" alt="Ícone repositórios">
-                  <a href="#">Joaosam/Teste 400</a>
-                  <p>Bio teste</p>
+                  <div class="contentRepos">
+                    <img src="../assets/repos.svg" alt="Ícone repositórios">
+                    <a id="nameRepos3" href="#" target="_blank"></a>
+                  </div>
+                  <p id="bioRepos3"></p>
                 </div>
 
                 <div class="containerFav">
