Fixed main actions

--- a/home/home.html
+++ b/home/home.html
@@ -184,13 +184,13 @@
                 <li> <a href="https://github.com/new" target="_blank">
                   Criar Repositório</li>
                 </a>
-                <li><a href="https://github.com/new/import">
+                <li><a href="https://github.com/new/import" target="_blank">
                   Importar Repositório</li>
                 </a>
                 <li> <a href="https://gist.github.com/" target="_blank">
                   Novo Gist</li>
                 </a>
-                <li><a href="https://github.com/organizations/plan">
+                <li><a href="https://github.com/organizations/plan" target="_blank">
                   Nova Organização</li>
                 </a>
                 <li><a id="newProjectHubkut" href="" target="_blank">
