Created starred repos

--- a/home/home.html
+++ b/home/home.html
@@ -144,7 +144,7 @@
                 <p>Favoritos</p>
                 <div class="welcomeMedia">
                   <img src="../assets/stars.svg" alt="Ícone favoritos github" />
-                  <p id="favorites">15</p
+                  <p id="favorites"></p
                   >
                 </div>
               </div>
