--- a/home/home.html
+++ b/home/home.html
@@ -102,8 +102,8 @@
 
             <div class="portfolio">
               <img src="../assets/url.svg" alt="Ícone portfolio" />
-              <a id="portfolio" href="https://joaosam.github.io/PortfolioPage/" target="_blank"
-                ></a
+              <a id="portfolio" href="https://www.rocketseat.com.br/" target="_blank"
+                >https://www.rocketseat.com.br/</a
               >
             </div>
           </div>
