Updated logo direction

--- a/home/home.html
+++ b/home/home.html
@@ -22,7 +22,7 @@
     <header>
       <div class="containerHeader">
         <div class="logo">
-          <a href="./home.html">
+          <a id="logo" href="./home.html">
             <img src="../assets/hubkut-logo.svg" alt="Logo Hubkut" />
           </a>
         </div>
