Create mobile version

--- a/index.html
+++ b/index.html
@@ -59,15 +59,17 @@
       </div>
 
       <footer>
-        <p>© 2022 Hubkut</p>
+        <div class="containerFooter">
+          <p>© 2022 Hubkut</p>
 
-        <ul>
-          <li><a href="#">Sobre o Hubkut</a></li>
-          <li><a href="#">Centro de segurança</a></li>
-          <li><a href="#">Privacidade</a></li>
-          <li><a href="#">Termos</a></li>
-          <li><a href="#">Contato</a></li>
-        </ul>
+          <ul>
+            <li><a href="#">Sobre o Hubkut</a></li>
+            <li><a href="#">Centro de segurança</a></li>
+            <li><a href="#">Privacidade</a></li>
+            <li><a href="#">Termos</a></li>
+            <li><a href="#">Contato</a></li>
+          </ul>
+        </div>
       </footer>
     </div>
   </body>
