Create menu button - mobile version

--- a/home/home.html
+++ b/home/home.html
@@ -18,13 +18,15 @@
     />
     <title>Hubkut | Home</title>
   </head>
-  <body>
+  <body class="">
     <header>
       <div class="containerHeader">
         <div class="logo">
           <a id="logo" href="./home.html">
             <img src="../assets/hubkut-logo.svg" alt="Logo Hubkut" />
           </a>
+          <img id="menuButton" onclick="showAside()" src="../assets/menu-button.svg" alt="Botão do menu">
+          <img id="closeMenu" onclick="hiddenAside()" src="../assets/cancel 1.svg" alt="Fechar menu">
         </div>
 
         <nav>
