Fixed mobile version

--- a/home/home.html
+++ b/home/home.html
@@ -18,7 +18,7 @@
     />
     <title>Hubkut | Home</title>
   </head>
-  <body class="">
+  <body>
     <header>
       <div class="containerHeader">
         <div class="logo">
