--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <title>Hubkut | Login</title>
   </head>
   <body>
-    <div onclick="changeTheme()" class="iconChangeTheme"></div>
-
     <div class="container">
       <div class="home">
         <section class="welcome">
+          <div onclick="changeTheme()" class="iconChangeTheme"></div>
           <div class="logo">
             <img src="./assets/hubkut-logo.svg" alt="Logo Hubkut" />
           </div>
@@ -62,13 +61,11 @@
         <div class="containerFooter">
           <p>© 2022 Hubkut</p>
 
-          <ul>
-            <li><a href="#">Sobre o Hubkut</a></li>
-            <li><a href="#">Centro de segurança</a></li>
-            <li><a href="#">Privacidade</a></li>
-            <li><a href="#">Termos</a></li>
-            <li><a href="#">Contato</a></li>
-          </ul>
+          <a href="#">Sobre o Hubkut</a>
+          <a href="#">Centro de segurança</a>
+          <a href="#">Privacidade</a>
+          <a href="#">Termos</a>
+          <a href="#">Contato</a>
         </div>
       </footer>
     </div>
