Fixed mobile version

--- a/home/home.html
+++ b/home/home.html
@@ -125,7 +125,7 @@
             <h1>Bem-vindo(a), <span id="loginProfile"></span></h1>
 
             <div class="containerPhrase">
-              <span>Sorte de hoje:</span><p id="quoteOfTheDay"></p>
+              <p id="quoteOfTheDay"></p>
             </div>
 
             <div class="welcomeInfos">
