--- a/home/home.html
+++ b/home/home.html
@@ -10,7 +10,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css">
+    
     <link
       rel="shortcut icon"
       href="../assets/favicon.ico"
@@ -26,7 +27,7 @@
             <img src="../assets/hubkut-logo.svg" alt="Logo Hubkut" />
           </a>
           <img id="menuButton" onclick="showAside()" src="../assets/menu-button.svg" alt="Botão do menu">
-          <img id="closeMenu" onclick="hiddenAside()" src="../assets/cancel 1.svg" alt="Fechar menu">
+          <img id="closeMenu" onclick="showAside()" src="../assets/cancel 1.svg" alt="Fechar menu">
         </div>
 
         <nav>
